# crc-covlib

./: .gitignore  LICENSE-3RD-PARTY.txt  LICENSE.txt  Makefile  README.md  README_FR.md  install_ITU_data.py
python-wrapper/: README.md  README_FR.md  pyproject.toml
python-wrapper/crc_covlib/: LICENSE.txt  __init__.py  simulation.py
python-wrapper/crc_covlib/helper/: __init__.py  antennas.py  buildings.py  datacube_canada.py  itur_data.py  itur_m2101.py  itur_p1057.py  itur_p1144.py  itur_p1411.py  itur_p1511.py  itur_p2001.py  itur_p2108.py  itur_p2109.py  itur_p2145.py  itur_p453.py  itur_p528.py  itur_p530.py  itur_p618.py  itur_p619.py  itur_p676.py  itur_p681.py  itur_p835.py  itur_p837.py  itur_p838.py  itur_p839.py  itur_p840.py  streets.py  topography.py
python-wrapper/docs/: helper.antennas.md  helper.buildings.md  helper.datacube_canada.md  helper.itur_data.md  helper.itur_m2101.md  helper.itur_p1411.md  helper.itur_p1511.md  helper.itur_p2001.md  helper.itur_p2108.md  helper.itur_p2109.md  helper.itur_p2145.md  helper.itur_p453.md  helper.itur_p528.md  helper.itur_p530.md  helper.itur_p618.md  helper.itur_p619.md  helper.itur_p676.md  helper.itur_p681.md  helper.itur_p835.md  helper.itur_p837.md  helper.itur_p838.md  helper.itur_p839.md  helper.itur_p840.md  helper.streets.md  helper.topography.md  readme.md
python-wrapper/examples/: README.md  README_FR.md  requirements.txt
python-wrapper/examples/antenna-pattern/: antenna-pattern.py  generic_antenna.ant
python-wrapper/examples/area-results-comparison/: area-results-comparison.py
src/: Generator.h  (+105 more)
(+159 files in other folders)
