[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "crc_covlib"
description = "Software library for radiowave coverage and interference prediction"
requires-python = ">=3.9"
keywords = ["propagation", "pathloss", "coverage", "interference", "radio", "frequency", "RF", "radiofrequency", "radiowave", "prediction", "Longley-Rice", "ITM", "P.1812", "P.452", "eHata"]
license = {text = "see crc_covlib/LICENSE.txt"}
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux", # requires libcrc-covlib.so to be built first
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Telecommunications Industry",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
]

dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "crc_covlib.__version__"}

[project.urls]
Homepage = "https://github.com/ic-crc/crc-covlib"
Repository = "https://github.com/ic-crc/crc-covlib.git"

[tool.setuptools.packages.find]
include = ["crc_covlib*"]

[tool.setuptools.package-data]
"*" = ["*.dll", "*.so", "*.txt", "*.csv", "*.dat"]
